# blackbox

./: ChangeLog-0.70.x  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.in
data/styles/: Makefile.in
doc/: Makefile.in  blackbox.1.in
doc/fr_FR/: Makefile  Makefile.in
doc/ja_JP/: Makefile  Makefile.in
doc/nl_NL/: Makefile  Makefile.in
doc/sl_SI/: Makefile  Makefile.in
lib/: .Unicode.cc.un~  Application.cpp  Application.h  Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  Display.cpp  Display.h  EWMH.cpp  EWMH.h  EventHandler.h  Font.cpp  Font.h  Image.cc  Image.cpp  Image.h  Makefile.am  Makefile.in  Menu.cpp  Menu.h  Pen.cpp  Pen.h  PixmapCache.cpp  PixmapCache.h  Rect.cpp  Rect.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Unicode.cc  Unicode.cpp  Unicode.h  Util.cpp  Util.h  Util.hh  XDG.cc  (+6 more)
nls/C/: blackbox.m
nls/ko_KR/: blackbox.m
po/: POTFILES.in
src/: .Makefile.am.un~  BlackboxResource.cc  BlackboxResource.cpp  BlackboxResource.h  Clientmenu.cpp  Clientmenu.h  Configmenu.cpp  Configmenu.h  Iconmenu.cpp  Iconmenu.h  Makefile.am  Makefile.in  Rootmenu.cpp  Rootmenu.h  Screen.cc  Screen.cpp  Screen.h  ScreenResource.cc  ScreenResource.cpp  ScreenResource.h  Slit.cpp  Slit.h  Slitmenu.cpp  Slitmenu.h  StackingList.cpp  StackingList.h  Toolbar.cc  Toolbar.cpp  Toolbar.h  Toolbarmenu.cpp  Toolbarmenu.h  Window.cpp  Window.h  WindowGroup.cpp  WindowGroup.h  Windowmenu.cpp  Windowmenu.h  Workspace.cpp  Workspace.h  Workspacemenu.cpp  (+6 more)
util/: .Makefile.am.un~  .bsetroot.cc.un~  Makefile.am  Makefile.in  bsetroot.cc  bsetroot.cpp
